# basket

./: .coveragerc  .demo_env  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .taskcluster.yml  .travis.yml  Dockerfile  Jenkinsfile  Justfile  Makefile  Procfile  README.rst  admin.py  circle.yml  conftest.py  contribute.json  docker-compose.yml  dodo.py  env-dist  log_settings.py  manage.py  newrelic.ini  pyproject.toml  requirements.in  requirements.txt  responsys.py  settings.py  settings_ex.py  settings_travis.py  setup.cfg  urls.py  wsgi.py
.circleci/: config.yml
.dependabot/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-and-push.yml  gitlab-mirror.yml  pull_request_tests.yml
.travis/: id_rsa.enc
apps/basketauth/: __init__.py  admin.py  tests.py
apps/emailer/: __init__.py  admin.py  base.py  models.py  tests.py
apps/nagios/: tests.py  urls.py  views.py
apps/news/: README  admin.py  middleware.py  models.py  news.html  newsletters.py  responsys.py  responsys_helper.py  tasks.py  test_responsys.py  tests.py  urls.py  views.py
apps/subscriptions/: admin.py  handlers.py  models.py  tests.py  urls.py
apps/vars/: __init__.py  models.py
basket/: __init__.py  admin.py  apps.py  errors.py  settings.py  urls.py  wsgi.py  wsgi_config.py
basket/api/: api.py  auth.py  schemas.py
basket/base/: decorators.py  exceptions.py  forms.py  middleware.py  models.py  rq.py  tasks.py  throttling.py  utils.py  views.py
basket/contact/: api.py  schemas.py  tasks.py  validators.py
basket/news/: admin.py  api.py  apps.py  auth.py  celery.py  country_codes.py  fields.py  forms.py  middleware.py  models.py  newsletters.py  schemas.py  tasks.py  urls.py  utils.py  views.py
basket/petition/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
basket/saml/: settings.py  urls.py
cron/: prod
docker/envfiles/: local.env  test.env
docs/: Makefile  conf.py  index.rst  install.rst  newsletter_api.rst  production_environments.rst
emails/: home.py
jenkins/: default.groovy  global.yml  utils.groovy
jenkins/branches/: jenkins-deploy-and-k8s.yml  master.yml  prod.yml
libs/: ageutils.py  csrf_exempt_resource.py  html2text.py  ldaputils.py  mysmtp.py  test_client.py  utils.py
libs/custom_emailers/: reminder.py
libs/product_details_json/: .last_update
migrations/: 01-locale-code-maxlength.sql  02-iphone-emails.sql  03-mailchimp.sql  04-emailer-from-fields.sql  05-migrate-recipients.sql  06-add-country.sql
news/: README  admin.py  apps.py  celery.py  country_codes.py  email.py  fields.py  forms.py  middleware.py  models.py  newsletters.py  tasks.py  tests.py  urls.py  utils.py  views.py
news/backends/: common.py  et-wsdl.txt  exacttarget.py  exacttarget_rest.py  sfdc.py  sfmc.py
news/fixtures/: newsletters.json
news/migrations/: 0001_initial.py  0002_auto.py  0003_auto_20151202_0808.py  0005_auto__add_field_newsletter_confirm_message.py  0005_convert_newsletter_vendor_id.py  0006_auto__add_apiuser.py  0006_merge.py  0007_auto_20160531_1454.py  0007_auto__add_failedtask.py  0008_auto_20160605_1345.py  0008_auto__add_field_subscriber_fxa_id.py  0009_auto__add_interest.py  0009_transactionalemailmessage.py  0010_auto__add_field_interest_steward_emails.py  0011_auto_20160607_1203.py  0011_auto__add_localestewards__add_unique_localestewards_interest_locale__d.py  0012_auto__add_newslettergroup.py  0013_auto__add_blockedemail.py  0014_auto__add_smsmessage.py
news/tests/: __init__.py  test__utils.py  test_backend_exacttarget.py  test_backend_exacttarget_rest.py  test_backends_sfmc.py  test_confirm.py  test_email.py  test_fields.py  test_models.py  test_newsletters.py  test_phonebook.py  test_send_confirm_notice.py  test_send_welcomes.py  test_sfdc.py  test_students.py  test_tasks.py  test_update_user.py  test_update_user_task.py  test_upsert_user.py  test_users.py  (+1 more)
requirements/: base.txt  compiled.txt  default.txt  dev.in  dev.txt  docs.txt  prod.in  prod.txt  travis.txt
saml/: remote_metadata.xml  settings.py  urls.py
settings/: __init__.py  base.py  local.py-dist  travis.py
templates/: 404.html  500.html
wsgi/: app.py  basket.wsgi  config.py
(+190 files in other folders)
