[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "basket"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MPL 2.0"

[tool.poetry.dependencies]
python = "^3.8"
APScheduler = "3.8.1"
boto3 = "1.16.59"
celery = "4.4.7"
configparser = "5.0.1"
contextlib2 = "0.6.0.post1"
dj-database-url = "0.5.0"
django = "2.2.25"
django-allow-cidr = "0.3.1"
django-cache-url = "3.0.0"
django-cors-headers = "3.10.1"
django-extensions = "3.1.5"
django-jsonfield = "1.4.1"
django-mozilla-product-details = "0.14.1"
django-picklefield = "3.0.1"
django-ratelimit = "2.0.0"
django-redis = "5.1.0"
django-statsd-mozilla = "0.4.0"
django-synctool = { url = "https://github.com/pmclanahan/django-synctool/archive/5f7cf9bad741e60bd9df32aa90e71425d98e437c.tar.gz"}
django-watchman = "1.2.0"
email-validator = "1.1.2"
gunicorn = "20.0.4"
hiredis = "2.0.0"
importlib-metadata = "3.4.0"
ipaddress = "1.0.23"
lxml = "4.7.1"
meinheld = "1.0.2"
mozilla-django-oidc = "1.2.4"
msgpack-python = "0.5.6"
mysqlclient = "2.0.3"
newrelic = "5.4.1.134"
phonenumbers = "8.12.16"
PyFxA = "0.7.7"
pysilverpop = "0.2.6"
python-decouple = "3.4"
PyYAML = "6.0"
salesforce-fuelsdk = { url = "https://github.com/mozmeao/FuelSDK-Python/archive/172815bd74009e36b728b16f774f1aafecb06d03.tar.gz"}
sentry-sdk = "0.19.5"
simple-salesforce = "1.10.1"
user-agents = "2.2.0"
whitenoise = "5.2.0"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "3.7.9"
mock = "3.0.5"
pbr = "5.4.4"
pep8 = "1.7.1"
pytest-django = "4.1.0"
pytest-pythonpath = "0.7.3"
urlwait = "1.0"

# actually a docs dependency but we can only have prod or dev dep groups
[tool.poetry.extras]
docs = ["Sphinx = 3.3.0"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
virtualenvs.create = false
